fix table overflow

--- a/docs/style.css
+++ b/docs/style.css
@@ -22,7 +22,7 @@ aside {
 	}
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
 	.my-fig {
 		margin-left: 1em;
 		float: right !important;
